// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parameters: bug parameter when value is number and passed 0 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "1",
    "content-type": "text/html; charset=utf-8",
    "etag": "W/\\"1-tlifxqsNyCzxIJnRwtQKuZToQQw\\"",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "0",
}
`;

exports[`Parameters: should bind a method parameter to a cookie 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "2",
    "content-type": "text/html; charset=utf-8",
    "etag": "W/\\"2-ZP5c6gUPmMfHXLaW+alufW5DcRc\\"",
    "set-cookie": Array [
      "cookie=hey; Path=/",
    ],
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": ":(",
}
`;

exports[`Parameters: should bind a method parameter to a query parameter 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "7",
    "content-type": "text/html; charset=utf-8",
    "etag": "W/\\"7-5Uyg9FH6Z639wlnjohqGsan13Gc\\"",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "lolilol",
}
`;

exports[`Parameters: should bind a method parameter to a query parameter and cast to number 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "13",
    "content-type": "application/json; charset=utf-8",
    "etag": "W/\\"d-+eIvcEC3YUszYERL17BmmrIVMVw\\"",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "[\\"number\\",12]",
}
`;

exports[`Parameters: should bind a method parameter to the next function 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/html; charset=utf-8",
    "etag": "W/\\"3-C+7Hteo/D9vJXQ3UfzxbwnXaijM\\"",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "foo",
}
`;

exports[`Parameters: should bind a method parameter to the request body 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "13",
    "content-type": "application/json; charset=utf-8",
    "etag": "W/\\"d-pedE0BZFQNM7HX6mFsKPL6l+dUo\\"",
  },
  "req": Object {
    "data": Object {
      "foo": "bar",
    },
    "headers": Object {
      "content-type": "application/json",
    },
    "method": "POST",
  },
  "status": 200,
  "text": "{\\"foo\\":\\"bar\\"}",
}
`;

exports[`Parameters: should bind a method parameter to the request headers 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "11",
    "content-type": "text/html; charset=utf-8",
    "etag": "W/\\"b-zaZ1r0YCMBDq+OjlsZnp2JpqfDA\\"",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {
      "testhead": "fooTestHead",
    },
    "method": "GET",
  },
  "status": 200,
  "text": "fooTestHead",
}
`;

exports[`Parameters: should bind a method parameter to the request object 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/html; charset=utf-8",
    "etag": "W/\\"3-8DC7vTKWbN5BA3uYqIScRrduS8E\\"",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "GET",
}
`;

exports[`Parameters: should bind a method parameter to the response object 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/html; charset=utf-8",
    "etag": "W/\\"3-C+7Hteo/D9vJXQ3UfzxbwnXaijM\\"",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "foo",
}
`;

exports[`Parameters: should bind a method parameter to the url parameter of the web request 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/html; charset=utf-8",
    "etag": "W/\\"3-C+7Hteo/D9vJXQ3UfzxbwnXaijM\\"",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "foo",
}
`;

exports[`Parameters: should bind a method parameter to the url parameter of the web request and cast to number 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "13",
    "content-type": "application/json; charset=utf-8",
    "etag": "W/\\"d-f7JRWtNSw/8B+r0iQq6BpCFihJo\\"",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "[\\"number\\",42]",
}
`;
